kube/testalb/unused/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: hello-kubernetes
