kube/testalb/unused/ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: "*"
    http:
      paths:
      - path: "/*"
        backend:
          serviceName: hello-kubernetes
          servicePort: 80
