kube/testalb/unused/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    ingress.kubernetes.io/rewrite-target: /$1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:938175221734:certificate/630863b1-2524-4780-806f-59819ccad3f0
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # external-dns.alpha.kubernetes.io/hostname: “domain1.net,domain2.com”
spec:
  rules:
  - host: hello.stargazer.datascience-team.dev-unext.com
    http:
      paths:
      - path: "/*"
        backend:
          serviceName: hello-kubernetes
          servicePort: 80
